[package]
name = "update-brave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.0", features = ["color", "derive", "wrap_help"] }
futures = "0.3.28"
octocrab = "0.30.1"
once_cell = "1.17.1"
reqwest = { version = "0.11.20", features = ["stream"] }
tempfile = "3.8.0"
tokio = { version = "1.32.0", features = ["full"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
